--- a/FelaBaleFigthers/Layouts/Raudskjegg_Station.xml
+++ b/FelaBaleFigthers/Layouts/Raudskjegg_Station.xml
@@ -1431,10 +1431,11 @@
                         <CrouchSpeed>50</CrouchSpeed>
                         <DoubleJumping>false</DoubleJumping>
                         <CanControl>true</CanControl>
-                        <CanTakeDamage>true</CanTakeDamage>
                         <Can_B>true</Can_B>
-                        <B_Damage>0</B_Damage>
                         <Can_UpB>true</Can_UpB>
+                        <CanTakeDamage>true</CanTakeDamage>
+                        <A_Damage>0</A_Damage>
+                        <B_Damage>0</B_Damage>
                         <UpB_Damage>0</UpB_Damage>
                     </instance-variables>
                     <behavior-instances>
