--- a/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
+++ b/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
@@ -49,6 +49,26 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Yokko_Mountain2" uid="1060">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <hotspot>Top-left</hotspot>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-24</x>
+                        <y>16</y>
+                        <z>0</z>
+                        <width>360</width>
+                        <height>96</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
@@ -133,6 +153,26 @@
                         <height>64</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Yokko_Clouds" uid="1059">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <hotspot>Top-left</hotspot>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>0</x>
+                        <y>80</y>
+                        <z>0</z>
+                        <width>320</width>
+                        <height>112</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
@@ -317,6 +357,7 @@
                     <instance-variables>
                         <UseWrap>true</UseWrap>
                         <Offset>0</Offset>
+                        <Disposable>false</Disposable>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Down">
@@ -353,6 +394,56 @@
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.75</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Yokko_Bathers" uid="1061">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <UseWrap>false</UseWrap>
+                        <Offset>0</Offset>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="Down">
+                            <properties>
+                                <max-speed>500</max-speed>
+                                <acceleration>130</acceleration>
+                                <deceleration>500</deceleration>
+                                <directions>Up &amp; down</directions>
+                                <set-angle>No</set-angle>
+                                <default-controls>No</default-controls>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="Side">
+                            <properties>
+                                <max-speed>500</max-speed>
+                                <acceleration>130</acceleration>
+                                <deceleration>500</deceleration>
+                                <directions>8 directions</directions>
+                                <set-angle>No</set-angle>
+                                <default-controls>No</default-controls>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-72</x>
+                        <y>136</y>
+                        <z>0</z>
+                        <width>32</width>
+                        <height>32</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.84375</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
