--- a/FelaBaleFigthers/_TOOLS_/Layouts/_BASE_.xml
+++ b/FelaBaleFigthers/_TOOLS_/Layouts/_BASE_.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <c2layout>
-    <name>Menu</name>
-    <sid>4650502934421703</sid>
-    <event-sheet>Menu</event-sheet>
+    <name>_BASE_</name>
+    <sid>485539680587291</sid>
+    <event-sheet>Dialogue</event-sheet>
     <size>
         <width>320</width>
         <height>192</height>
@@ -13,9 +13,9 @@
     </margins>
     <unbounded-scrolling>0</unbounded-scrolling>
     <layers>
-        <layer name="Layer 0" sid="6199299691916345">
+        <layer name="Color" sid="185965256610614">
             <initially-visible>1</initially-visible>
-            <background-color>255,255,255</background-color>
+            <background-color>255,255,204</background-color>
             <transparent>0</transparent>
             <parallax>
                 <x>1</x>
@@ -29,26 +29,19 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="NoPurpuseText" uid="8">
+                <instance type="ColorBG" uid="43">
                     <properties>
-                        <text>Velg verktøy</text>
                         <initial-visibility>Visible</initial-visibility>
-                        <font>Arial,-16</font>
-                        <color>0,0,0</color>
-                        <horizontal-alignment>Center</horizontal-alignment>
-                        <vertical-alignment>Bottom</vertical-alignment>
                         <hotspot>Top-left</hotspot>
-                        <wrapping>Word</wrapping>
-                        <line-height>0</line-height>
                     </properties>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>0</x>
+                        <x>208</x>
                         <y>0</y>
                         <z>0</z>
-                        <width>320</width>
-                        <height>30</height>
+                        <width>112</width>
+                        <height>128</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
@@ -56,10 +49,29 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Button" uid="9">
+            </instances>
+            <effects />
+        </layer>
+        <layer name="BG" sid="639302738492292">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,204</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
+                <instance type="SLE_Button" uid="48">
                     <properties>
                         <type>Button</type>
-                        <text>Translation Editor</text>
+                        <text>Lagre</text>
                         <tooltip></tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
@@ -68,52 +80,25 @@
                         <checked>No</checked>
                     </properties>
                     <instance-variables>
-                        <Choice>Translation</Choice>
+                        <Choice>Save</Choice>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>80</x>
-                        <y>96</y>
-                        <z>0</z>
-                        <width>160</width>
-                        <height>32</height>
-                        <depth>0</depth>
-                        <hotspotX>0</hotspotX>
-                        <hotspotY>0</hotspotY>
-                    </world>
-                </instance>
-                <instance type="Button" uid="41">
-                    <properties>
-                        <type>Button</type>
-                        <text>Scooter Level Editor</text>
-                        <tooltip></tooltip>
-                        <initial-visibility>Visible</initial-visibility>
-                        <enabled>Yes</enabled>
-                        <auto-font-size>Yes</auto-font-size>
-                        <id-optional></id-optional>
-                        <checked>No</checked>
-                    </properties>
-                    <instance-variables>
-                        <Choice>SLE</Choice>
-                    </instance-variables>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>80</x>
+                        <x>224</x>
                         <y>48</y>
                         <z>0</z>
-                        <width>160</width>
+                        <width>80</width>
                         <height>32</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
                     </world>
                 </instance>
-                <instance type="Button" uid="42">
+                <instance type="SLE_Button" uid="49">
                     <properties>
                         <type>Button</type>
-                        <text>Dialogue Editor</text>
+                        <text>Last inn</text>
                         <tooltip></tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
@@ -122,15 +107,69 @@
                         <checked>No</checked>
                     </properties>
                     <instance-variables>
-                        <Choice>Dialogue_Main</Choice>
+                        <Choice>Load</Choice>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>80</x>
-                        <y>144</y>
+                        <x>224</x>
+                        <y>80</y>
                         <z>0</z>
-                        <width>160</width>
+                        <width>80</width>
+                        <height>32</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
+                <instance type="SLE_Button" uid="50">
+                    <properties>
+                        <type>Button</type>
+                        <text>Tilbake</text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>No</checked>
+                    </properties>
+                    <instance-variables>
+                        <Choice>Back</Choice>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>256</x>
+                        <y>16</y>
+                        <z>0</z>
+                        <width>48</width>
+                        <height>32</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
+                <instance type="SLE_Button" uid="51">
+                    <properties>
+                        <type>Button</type>
+                        <text>Ny</text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>No</checked>
+                    </properties>
+                    <instance-variables>
+                        <Choice>New</Choice>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>224</x>
+                        <y>16</y>
+                        <z>0</z>
+                        <width>32</width>
                         <height>32</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
@@ -138,6 +177,24 @@
                     </world>
                 </instance>
             </instances>
+            <effects />
+        </layer>
+        <layer name="Tiles" sid="991734300516979">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances />
             <effects />
         </layer>
     </layers>
