--- a/FelaBaleFigthers/Layouts/MIDI_GameWorld.xml
+++ b/FelaBaleFigthers/Layouts/MIDI_GameWorld.xml
@@ -502,6 +502,7 @@
                         <A_Damage>0</A_Damage>
                         <B_Damage>0</B_Damage>
                         <UpB_Damage>0</UpB_Damage>
+                        <Deceleration>0</Deceleration>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Platform">
