--- a/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
+++ b/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
@@ -451,6 +451,89 @@
             </instances>
             <effects />
         </layer>
+        <layer name="Crosshair" sid="357062183925367">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
+                <instance type="Crosshair" uid="1082">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-80</x>
+                        <y>200</y>
+                        <z>0</z>
+                        <width>16</width>
+                        <height>16</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Yokko_Projectile" uid="1083">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <Distance>0</Distance>
+                        <Speed>400</Speed>
+                        <TargetX>0</TargetX>
+                        <TargetY>0</TargetY>
+                        <PrevScale>1</PrevScale>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="DestroyOutsideLayout" />
+                        <behavior-instance type="Bullet">
+                            <properties>
+                                <speed>400</speed>
+                                <acceleration>0</acceleration>
+                                <gravity>0</gravity>
+                                <bounce-off-solids>No</bounce-off-solids>
+                                <set-angle>Yes</set-angle>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-56</x>
+                        <y>208</y>
+                        <z>0</z>
+                        <width>8</width>
+                        <height>8</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+            </instances>
+            <effects />
+        </layer>
         <layer name="Yokko" sid="645040285401292">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
@@ -479,6 +562,8 @@
                         <StartHeight>168</StartHeight>
                         <Enabled>false</Enabled>
                         <CurrentTileset>-1</CurrentTileset>
+                        <Transformed>false</Transformed>
+                        <MoveUp>false</MoveUp>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="8Direction">
@@ -486,7 +571,7 @@
                                 <max-speed>200</max-speed>
                                 <acceleration>600</acceleration>
                                 <deceleration>500</deceleration>
-                                <directions>Left &amp; right</directions>
+                                <directions>8 directions</directions>
                                 <set-angle>No</set-angle>
                                 <default-controls>No</default-controls>
                                 <initial-state>Enabled</initial-state>
@@ -534,7 +619,7 @@
             </instances>
             <effects />
         </layer>
-        <layer name="Fader" sid="537627598635693">
+        <layer name="HUD" sid="210106730963768">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
@@ -552,7 +637,7 @@
             <instances />
             <effects />
         </layer>
-        <layer name="HUD" sid="210106730963768">
+        <layer name="Fader" sid="537627598635693">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
