--- a/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditDialogue.xml
+++ b/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditDialogue.xml
@@ -46,8 +46,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>16</x>
-                        <y>112</y>
+                        <x>-144</x>
+                        <y>0</y>
                         <z>0</z>
                         <width>64</width>
                         <height>32</height>
@@ -73,8 +73,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>80</x>
-                        <y>112</y>
+                        <x>-80</x>
+                        <y>0</y>
                         <z>0</z>
                         <width>64</width>
                         <height>32</height>
@@ -235,6 +235,33 @@
                         <y>16</y>
                         <z>0</z>
                         <width>128</width>
+                        <height>32</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                    </world>
+                </instance>
+                <instance type="Dialogue_BTN" uid="64">
+                    <properties>
+                        <type>Button</type>
+                        <text>Endre</text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>No</checked>
+                    </properties>
+                    <instance-variables>
+                        <Action>EditE</Action>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>16</x>
+                        <y>112</y>
+                        <z>0</z>
+                        <width>64</width>
                         <height>32</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
