--- a/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditEntry.xml
+++ b/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditEntry.xml
@@ -240,7 +240,7 @@
                 </instance>
                 <instance type="TextSpeed" uid="69">
                     <properties>
-                        <text></text>
+                        <text>0.05</text>
                         <placeholder></placeholder>
                         <tooltip></tooltip>
                         <initial-visibility>Visible</initial-visibility>
