--- a/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditEntry.xml
+++ b/FelaBaleFigthers/_TOOLS_/Layouts/Dialogue_EditEntry.xml
@@ -165,7 +165,7 @@
                 </instance>
                 <instance type="MoodList" uid="62">
                     <properties>
-                        <items>normal;sint;glad;skremt</items>
+                        <items>normal;sint;glad;skremt;lei</items>
                         <tooltip></tooltip>
                         <initial-visibility>Visible</initial-visibility>
                         <enabled>Yes</enabled>
