--- a/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
+++ b/FelaBaleFigthers/Layouts/Yokko_WaterScooter.xml
@@ -37,10 +37,10 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-168</x>
+                        <x>0</x>
                         <y>0</y>
                         <z>0</z>
-                        <width>536</width>
+                        <width>320</width>
                         <height>98</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
@@ -57,10 +57,10 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-24</x>
-                        <y>16</y>
+                        <x>0</x>
+                        <y>0</y>
                         <z>0</z>
-                        <width>360</width>
+                        <width>320</width>
                         <height>96</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
@@ -97,10 +97,10 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>0</x>
-                        <y>98</y>
+                        <y>96</y>
                         <z>0</z>
                         <width>320</width>
-                        <height>94</height>
+                        <height>96</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
@@ -167,10 +167,10 @@
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>0</x>
-                        <y>80</y>
+                        <y>96</y>
                         <z>0</z>
                         <width>320</width>
-                        <height>112</height>
+                        <height>96</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
@@ -531,6 +531,41 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Yokko_FlyLady" uid="1084">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <behavior-instances>
+                        <behavior-instance type="DestroyOutsideLayout" />
+                        <behavior-instance type="Bullet">
+                            <properties>
+                                <speed>200</speed>
+                                <acceleration>0</acceleration>
+                                <gravity>500</gravity>
+                                <bounce-off-solids>No</bounce-off-solids>
+                                <set-angle>No</set-angle>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>-152</x>
+                        <y>120</y>
+                        <z>0</z>
+                        <width>32</width>
+                        <height>32</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
@@ -558,12 +593,14 @@
                         <collisions>Enabled</collisions>
                     </properties>
                     <instance-variables>
+                        <Health>100</Health>
                         <TurnSpeed>3</TurnSpeed>
                         <StartHeight>168</StartHeight>
                         <Enabled>false</Enabled>
                         <CurrentTileset>-1</CurrentTileset>
                         <Transformed>false</Transformed>
                         <MoveUp>false</MoveUp>
+                        <Landed>true</Landed>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="8Direction">
@@ -604,7 +641,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>160</x>
+                        <x>152</x>
                         <y>168</y>
                         <z>0</z>
                         <width>32</width>
